Closed Bug 783449 Opened 12 years ago Closed 12 years ago

popup menus show highlighted item from last time they were open

Categories

(Core :: Widget, defect)

x86
All
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla17

People

(Reporter: heycam, Assigned: mattwoodrow)

References

Details

Attachments

(1 file)

I don't know if this is a widget or gfx problem.  With current Nightlies on Mac, if I open a popup menu that I recently selected an item from, when it opens the last selected item is shown highlighted, when instead it should show no items highlighted.

STR:

1. Right click on a page's content.
2. Click View Page Info.
3. Close the Page Info window.
3. Right click again on the page's content.
4. Notice that View Page Info is initially highlighted, when it shouldn't be.
Please try to find a regression range among mozilla-central nightlies.

My hunch is that you'll find the 2012-08-14 nightly has this problem and the 2012-08-13 nightly doesn't.
The first bad revision is:
changeset:   102212:22f6adf8685b
user:        Matt Woodrow <matt.woodrow@gmail.com>
date:        Mon Aug 13 19:41:09 2012 -0700
files:       view/src/nsViewManager.cpp widget/gonk/nsWindow.cpp widget/gonk/nsWindow.h
description:
Bug 782413: Only paint widgets that have a layer manager. r=cjones
Blocks: 782413
Component: Widget: Cocoa → Widget
This happens when we flush an invalid region to the widget, but don't actually paint anything.

This check was only really for android/gonk which have multiple widgets, but only ever paint one of them.
Attachment #653241 - Flags: review?(roc)
are either this bug or bug 784137 dupes of bug 784117?
I think they probably both are.
OS: Mac OS X → All
https://hg.mozilla.org/mozilla-central/rev/1f6cd8529ae9
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla17
I'm actually still getting this for the first frame the awesomebar is openned :(. I'm guessing 17 is still affected as well.

https://dl.dropbox.com/u/10523664/Screenshots/bugzilla-awesomebar-open.mp4
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
(In reply to Benoit Girard (:BenWa) from comment #9)
> I'm actually still getting this for the first frame the awesomebar is
> openned :(. I'm guessing 17 is still affected as well.
> 
> https://dl.dropbox.com/u/10523664/Screenshots/bugzilla-awesomebar-open.mp4

Any progress here? We'll likely untrack soon if this continues to go unfixed. It's not super critical for release.
I don't see this anymore on 2012-10-03
Status: REOPENED → RESOLVED
Closed: 12 years ago12 years ago
Resolution: --- → FIXED
Looks like we're done here then, untracking.
Depends on: 832641
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: