Bug 783449 - Move android specific NeedsPaint checks into the android widget implementation. r=roc